styles/pages/Wardrobe.module.scss
@use "@/partials/abstracts/mixins" as *;
@use "@/partials/abstracts/variables" as *;

.wardrobe {
  position: relative;
  column-count: 2;
  column-gap: 1rem;
  margin: 0 1rem 3rem 1rem;

  &__create {
    margin: 1rem;
  }

  &__item {
    display: inline-block;
    margin-bottom: 1rem;
  }

  &__text {
    text-align: center;
  }

  &__image {
    // background-color: #eee;
    background-color: white;
    display: inline-block;
    margin-bottom: 0.25rem;
    width: 100%;
    border: 0.5px solid $black;
    vertical-align: middle;
    padding: 0.5rem;

    &__options {
      display: flex;
      justify-content: center;
      margin-bottom: 1rem;
    }

    &__option:first-child {
      margin-right: 1rem;
    }

    &__option:hover {
      text-decoration: underline;
    }
  }

  &__brand {
    text-transform: uppercase;
  }

  &__description {
    text-transform: capitalize;
  }
}

